--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <div class="p-6 max-w-2xl mx-auto">
     <h1 class="text-2xl font-bold mb-4">Dagelijkse Tracker</h1>
     <div id="daily-container" class="mb-4"></div>
+<p id="daily-progress" class="mb-4 text-sm text-gray-700"></p>
+<button id="save-day-btn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded mb-8">
+  Dag opslaan
+</button>
     <p id="daily-progress" class="mb-8 text-sm text-gray-700"></p>
 
     <h1 class="text-2xl font-bold mb-4">Wekelijkse Tracker</h1>
